# MultipleBeadedAgents

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini
docs/: USER_GUIDE.md
docs/beads/: capabilities.md  evaluation.md
docs/mba/: README.md  charter.md  implementation-status.md  non-technical-flow.md  roadmap.md  startup-setup.md  technical-flow.md
docs/mba/assets/: glm-guide.html  minimax-guide.html
mba_foundation/: README.md  __init__.py  __main__.py  cli.py  constants.py  detect.py  manifest.py  markers.py  orchestrator.py  preflight.py  product_boundary.py  sync_guard.py  workspace.py
mba_foundation/resources/opencode/: opencode.json
mba_foundation/resources/opencode/agents/: mba-worker.md  mba.md
mba_foundation/resources/skills/mba/: SKILL.md
mba_foundation/tests/: _isolation_helpers.py  conftest.py  test_cold_start_guidance.py  test_constants.py  test_detect.py  test_disposable_repo.py  test_io_encoding.py  test_manifest.py  test_markers.py  test_orchestrator.py  test_packaging.py  test_preflight.py  test_product_boundary.py  test_public_readiness.py  test_sync_guard.py  test_tool_consolidation.py  test_workspace.py
mba_foundation/tools/: verify_markers.py
mba_primitives/: README.md  __init__.py  __main__.py  assignment_contract.py  bead_read.py  bead_write.py  cli.py  constants.py  records_layout.py
mba_primitives/tests/: conftest.py  test_assignment_contract.py  test_bead_read.py  test_bead_write.py  test_disposable_repo.py  test_records_layout.py  test_records_layout_traversal.py
mba_runtime/: __init__.py  __main__.py  ai_resources.py  auditor_reliability.py  bd_client.py  cli.py  comments.py  constants.py  convergence.py  external_dispatch.py  graph.py  human_handoff.py  lifecycle.py  pattern_router.py  session_recovery.py  stream_capture.py  user_authority.py  workspace_safety.py
mba_runtime/tests/: conftest.py  test_ai_resources.py  test_auditor_reliability.py  test_bd_client.py  test_cli.py  test_comments.py  test_convergence.py  test_disposable_repo.py  test_external_dispatch.py  test_graph.py  test_human_handoff.py  test_pattern_router.py  test_proof_convergence.py  test_session_recovery.py  test_stream_capture.py  test_stream_cli.py  test_user_authority.py  test_user_authority_hardening.py  test_version.py  test_workspace_safety.py
